[package]
name = "scraper_query"
authors = ["feng liang <feng.liang@kaust.edu.sa>"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ifsheldon/scraper_query"
homepage = "https://github.com/ifsheldon/scraper_query"

[dependencies]
polars = { version = "0.43", features = ["lazy", "strings", "is_in"] }
scraper = "0.20"
ego-tree = "0.6"