[package]
name = "scraper_query"
description = "Ergonomic Query for HTML with Scraper"
authors = ["feng liang <feng.liang@kaust.edu.sa>"]
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ifsheldon/scraper_query"
homepage = "https://github.com/ifsheldon/scraper_query"

[dependencies]
polars = { version = "0.44", features = ["lazy", "strings", "is_in"] }
scraper = "0.21"
ego-tree = "0.9"